--- a/index.html
+++ b/index.html
@@ -49,29 +49,29 @@
                 <div class="slider">
                 <ul>
                     <li><picture>
-                      <source media="(max-width: 1250px)" srcset="./MEDIA/slider/1.jpg">
-                      <source media="(min-width: 1251px)" srcset="./MEDIA/slider/1.1.jpg">
-                        <img src="./MEDIA/slider/1.jpg" alt="imatge genèrica d'un gat">
+                      <source media="(max-width: 1250px)" srcset="./media/slider/1.jpg">
+                      <source media="(min-width: 1251px)" srcset="./media/slider/1.1.jpg">
+                        <img src="./media/slider/1.jpg" alt="imatge genèrica d'un gat">
                     </li></picture>
                     <li><picture>
-                      <source media="(max-width: 1250px)" srcset="./MEDIA/slider/2.jpg">
-                      <source media="(min-width: 1251px)" srcset="./MEDIA/slider/2.1.jpg">
-                      <img src="./MEDIA/slider/2.jpg" alt="imatge genèrica d'un gos">
+                      <source media="(max-width: 1250px)" srcset="./media/slider/2.jpg">
+                      <source media="(min-width: 1251px)" srcset="./media/slider/2.1.jpg">
+                      <img src="./media/slider/2.jpg" alt="imatge genèrica d'un gos">
                       </li></picture>
                     <li><picture>
-                      <source media="(max-width: 1250px)" srcset="./MEDIA/slider/3.jpg">
-                      <source media="(min-width: 1251px)" srcset="./MEDIA/slider/3.1.jpg">
-                      <img src="./MEDIA/slider/3.jpg" alt="imatge genèrica d'un gat">
+                      <source media="(max-width: 1250px)" srcset="./media/slider/3.jpg">
+                      <source media="(min-width: 1251px)" srcset="./media/slider/3.1.jpg">
+                      <img src="./media/slider/3.jpg" alt="imatge genèrica d'un gat">
                     </li></picture>
                     <li><picture>
-                      <source media="(max-width: 1250px)" srcset="./MEDIA/slider/4.jpg">
-                      <source media="(min-width: 1251px)" srcset="./MEDIA/slider/4.1.jpg">   
-                      <img src="./MEDIA/slider/4.jpg" alt="imatge genèrica d'un gos">
+                      <source media="(max-width: 1250px)" srcset="./media/slider/4.jpg">
+                      <source media="(min-width: 1251px)" srcset="./media/slider/4.1.jpg">   
+                      <img src="./media/slider/4.jpg" alt="imatge genèrica d'un gos">
                     </li></picture>
                     <li><picture>
-                      <source media="(max-width: 1250px)" srcset="./MEDIA/slider/5.jpg">
-                      <source media="(min-width: 1251px)" srcset="./MEDIA/slider/5.1.jpg">
-                      <img src="./MEDIA/slider/5.jpg" alt="imatge genèrica d'un gat">
+                      <source media="(max-width: 1250px)" srcset="./media/slider/5.jpg">
+                      <source media="(min-width: 1251px)" srcset="./media/slider/5.1.jpg">
+                      <img src="./media/slider/5.jpg" alt="imatge genèrica d'un gat">
                     </li></picture>
                 </ul>
             </div>
